--- a/src/portal/lib/src/create-edit-rule/create-edit-rule.component.html
+++ b/src/portal/lib/src/create-edit-rule/create-edit-rule.component.html
@@ -2,8 +2,8 @@
   <h3 class="modal-title">{{headerTitle | translate}}</h3>
   <hbr-inline-alert class="modal-title" (confirmEvt)="confirmCancel($event)"></hbr-inline-alert>
   <div class="modal-body modal-body-height">
-    <clr-alert [hidden]='!deletedLabelCount' [clrAlertType]="'alert-warning'" [clrAlertSizeSmall]="true" [clrAlertClosable]="false"
-      [(clrAlertClosed)]="alertClosed">
+    <clr-alert [hidden]='!deletedLabelCount' [clrAlertType]="'alert-warning'" [clrAlertSizeSmall]="true"
+      [clrAlertClosable]="false" [(clrAlertClosed)]="alertClosed">
       <div class="alert-item">
         <span class="alert-text">{{deletedLabelInfo}}</span>
         <div class="alert-actions">
@@ -15,9 +15,10 @@
       <section class="form-block">
         <div class="form-group form-group-override">
           <label class="form-group-label-override required">{{'REPLICATION.NAME' | translate}}</label>
-          <label aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-md tooltip-bottom-left" [class.invalid]='(ruleForm.controls.name.touched && ruleForm.controls.name.invalid) || !isRuleNameValid'>
-            <input type="text" id="ruleName" pattern="^[a-z0-9]+(?:[._-][a-z0-9]+)*$" class="inputWidth" required maxlength="255" formControlName="name"
-              #ruleName (keyup)='checkRuleName()' autocomplete="off">
+          <label aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-md tooltip-bottom-left"
+            [class.invalid]='(ruleForm.controls.name.touched && ruleForm.controls.name.invalid) || !isRuleNameValid'>
+            <input type="text" id="ruleName" pattern="^[a-z0-9]+(?:[._-][a-z0-9]+)*$" class="inputWidth" required
+              maxlength="255" formControlName="name" #ruleName (keyup)='checkRuleName()' autocomplete="off">
             <span class="tooltip-content">{{ruleNameTooltip | translate}}</span>
           </label>
           <span class="spinner spinner-inline spinner-pos" [hidden]="!inNameChecking"></span>
@@ -31,10 +32,13 @@
         <div class="form-group form-group-override">
           <label class="form-group-label-override required">{{'REPLICATION.SOURCE_PROJECT' | translate}}</label>
           <div formArrayName="projects">
-            <div class="projectInput inputWidth" *ngFor="let project of projects.controls; let i= index" [formGroupName]="i" (mouseleave)="leaveInput()">
-              <label aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-md tooltip-bottom-left" [class.invalid]='noProjectInfo'>
-                <input *ngIf="!projectId" formControlName="name" type="text" class="inputWidth" value="name" required pattern="^[a-z0-9]+(?:[._-][a-z0-9]+)*$"
-                  (keyup)='handleValidation()' (focus)="focusClear($event)" autocomplete="off">
+            <div class="projectInput inputWidth" *ngFor="let project of projects.controls; let i= index"
+              [formGroupName]="i" (mouseleave)="leaveInput()">
+              <label aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-md tooltip-bottom-left"
+                [class.invalid]='noProjectInfo'>
+                <input *ngIf="!projectId" formControlName="name" type="text" class="inputWidth" value="name" required
+                  pattern="^[a-z0-9]+(?:[._-][a-z0-9]+)*$" (keyup)='handleValidation()' (focus)="focusClear($event)"
+                  autocomplete="off">
                 <input *ngIf="projectId" formControlName="name" type="text" class="inputWidth" value="name" readonly>
                 <span class="tooltip-content">{{noProjectInfo | translate}}</span>
               </label>
@@ -54,11 +58,13 @@
             <div class="filterSelect" *ngFor="let filter of filters.controls; let i=index">
               <div [formGroupName]="i">
                 <div class="select floatSetPar">
-                  <select formControlName="kind" #selectedValue (change)="filterChange($event, selectedValue.value)" id="{{i}}" name="{{filterListData[i]?.name}}">
+                  <select formControlName="kind" #selectedValue (change)="filterChange($event, selectedValue.value)" id="{{i}}"
+                    name="{{filterListData[i]?.name}}">
                     <option *ngFor="let opt of filterListData[i]?.options;" value="{{opt}}">{{opt}}</option>
                   </select>
                 </div>
-                <label aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-md tooltip-bottom-left"  [class.invalid]='(filter.value.dirty || filter.value.touched) && filter.value.invalid'>
+                <label aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-md tooltip-bottom-left"
+                  [class.invalid]='(filter.value.dirty || filter.value.touched) && filter.value.invalid'>
                   <input type="text" #filterValue required size="14" formControlName="value" [attr.disabled]="(filterListData[i]?.name=='label') ?'' : null">
                   <span class="tooltip-content">{{'TOOLTIP.EMPTY' | translate}}</span>
                 </label>
@@ -68,8 +74,8 @@
                 <clr-icon shape="warning-standard" class="is-solid is-warning warning-icon" size="14" [hidden]="!deletedLabelCount || !(filterListData[i]?.name=='label')"></clr-icon>
                 <clr-icon shape="times-circle" class="is-solid" (click)="deleteFilter(i)"></clr-icon>
                 <div *ngIf="!withAdmiral">
-                  <hbr-filter-label [projectId]="projectId" [selectedLabelInfo]="filterLabelInfo"
-                    [isOpen]="filterListData[i].isOpen" (selectedLabels)="selectedLabelList($event, i)" (closePanelEvent)="filterListData[i].isOpen = false"></hbr-filter-label>
+                  <hbr-filter-label [projectId]="projectId" [selectedLabelInfo]="filterLabelInfo" [isOpen]="filterListData[i].isOpen"
+                    (selectedLabels)="selectedLabelList($event, i)" (closePanelEvent)="filterListData[i].isOpen = false"></hbr-filter-label>
                 </div>
               </div>
             </div>
@@ -82,14 +88,16 @@
         <div class="form-group form-group-override">
           <label class="form-group-label-override  required">{{'DESTINATION.ENDPOINT' | translate}}</label>
           <div formArrayName="targets" class="form-select">
-            <div class="select endpointSelect pull-left" *ngFor="let target of targets.controls; let i= index" [formGroupName]="i">
+            <div class="select endpointSelect pull-left" *ngFor="let target of targets.controls; let i= index"
+              [formGroupName]="i">
               <select id="ruleTarget" (change)="targetChange($event)" formControlName="id">
                 <option *ngFor="let target of targetList" value="{{target.id}}">{{target.name}}-{{target.endpoint}}</option>
               </select>
             </div>
           </div>
-            <label *ngIf="noEndpointInfo.length != 0" class="colorRed alertLabel">{{noEndpointInfo | translate}}</label>
-            <span class="alertLabel goLink" *ngIf="noEndpointInfo.length != 0" (click)="goRegistry()">{{'REPLICATION.ENDPOINTS' | translate}}</span>
+          <label *ngIf="noEndpointInfo.length != 0" class="colorRed alertLabel">{{noEndpointInfo | translate}}</label>
+          <span class="alertLabel goLink" *ngIf="noEndpointInfo.length != 0" (click)="goRegistry()">{{'REPLICATION.ENDPOINTS'
+            | translate}}</span>
         </div>
 
         <!--Trigger-->
@@ -130,15 +138,18 @@
               <input [hidden]="!isScheduleOpt" type="time" formControlName="offtime" required value="08:00" />
             </div>
           </div>
-          <div class="rule-width" [hidden]="!isImmediate">
-            <clr-checkbox [clrChecked]="false" id="ruleDeletion" formControlName="replicate_deletion">
-              {{'REPLICATION.DELETE_REMOTE_IMAGES' | translate}}
-            </clr-checkbox>
+          <div [hidden]="!isImmediate" class="clr-form-control rule-width">
+            <clr-checkbox-wrapper>
+              <input type="checkbox" [checked]="false" id="ruleDeletion" formControlName="replicate_deletion" class="clr-checkbox">
+              <label for="ruleDeletion" class="clr-control-label">{{'REPLICATION.DELETE_REMOTE_IMAGES' | translate}}</label>
+            </clr-checkbox-wrapper>
           </div>
-          <div class="rule-width">
-            <clr-checkbox [clrChecked]="true" id="ruleExit" formControlName="replicate_existing_image_now">
-              {{'REPLICATION.REPLICATE_IMMEDIATE' | translate}}
-            </clr-checkbox>
+          <div class="clr-form-control rule-width">
+            <clr-checkbox-wrapper>
+              <input type="checkbox" [checked]="true" id="ruleExit" formControlName="replicate_existing_image_now"
+                class="clr-checkbox">
+              <label for="ruleExit" class="clr-control-label">{{'REPLICATION.REPLICATE_IMMEDIATE' | translate}}</label>
+            </clr-checkbox-wrapper>
           </div>
         </div>
         <div class="loading-center">
@@ -148,7 +159,9 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" id="ruleBtnCancel" class="btn btn-outline" [disabled]="this.inProgress" (click)="onCancel()">{{ 'BUTTON.CANCEL' | translate }}</button>
-    <button type="submit" id="ruleBtnOk" class="btn btn-primary" (click)="onSubmit()" [disabled]="!ruleForm.valid || !isValid || !hasFormChange()">{{ 'BUTTON.SAVE' | translate }}</button>
+    <button type="button" id="ruleBtnCancel" class="btn btn-outline" [disabled]="this.inProgress" (click)="onCancel()">{{
+      'BUTTON.CANCEL' | translate }}</button>
+    <button type="submit" id="ruleBtnOk" class="btn btn-primary" (click)="onSubmit()" [disabled]="!ruleForm.valid || !isValid || !hasFormChange()">{{
+      'BUTTON.SAVE' | translate }}</button>
   </div>
 </clr-modal>
