--- a/src/portal/lib/src/helm-chart/helm-chart.component.html
+++ b/src/portal/lib/src/helm-chart/helm-chart.component.html
@@ -4,8 +4,7 @@
             <div class="row flex-items-xs-right option-right rightPos">
                 <div class="flex-xs-middle">
                     <hbr-filter [withDivider]="true" filterPlaceholder="{{'HELM_CHART.FILTER_FOR_CHARTS' | translate}}"
-                    [currentValue]="lastFilteredChartName"
-                    (filterEvt)="updateFilterValue($event)"></hbr-filter>
+                        [currentValue]="lastFilteredChartName" (filterEvt)="updateFilterValue($event)"></hbr-filter>
                     <span class="card-btn" (click)="showCard(true)" (mouseenter)="mouseEnter('card') " (mouseleave)="mouseLeave('card')">
                         <clr-icon [ngClass]="{'is-highlight': isCardView || isHovering('card') }" shape="view-cards"></clr-icon>
                     </span>
@@ -25,24 +24,26 @@
             <clr-datagrid (clrDgRefresh)="refresh()" [clrDgLoading]="loading" [(clrDgSelected)]="selectedRows">
                 <clr-dg-action-bar>
                     <button type="button" class="btn btn-sm btn-secondary" [disabled]="!developerRoleOrAbove" (click)="onChartUpload()">
-                            <clr-icon shape="upload" size="16"></clr-icon>{{'HELM_CHART.UPLOAD' | translate}}
+                        <clr-icon shape="upload" size="16"></clr-icon>{{'HELM_CHART.UPLOAD' | translate}}
                     </button>
-                    <button type="button" class="btn btn-sm btn-secondary" [disabled]="!hasProjectAdminRole || selectedRows.length<1" (click)="openChartDeleteModal(selectedRows)">
+                    <button type="button" class="btn btn-sm btn-secondary" [disabled]="!hasProjectAdminRole || selectedRows.length<1"
+                        (click)="openChartDeleteModal(selectedRows)">
                         <clr-icon shape="trash" size="16"></clr-icon>{{'BUTTON.DELETE' | translate}}
                     </button>
                     <button type="button" class="btn btn-sm btn-secondary" [disabled]="selectedRows.length!==1" (click)="downloadLatestVersion()">
                         <clr-icon shape="download" size="16"></clr-icon>{{'HELM_CHART.DOWNLOAD' | translate}}
                     </button>
                 </clr-dg-action-bar>
-                <clr-dg-column >{{'HELM_CHART.NAME' | translate}}</clr-dg-column>
-                <clr-dg-column >{{'HELM_CHART.STATUS' | translate}}</clr-dg-column>
+                <clr-dg-column>{{'HELM_CHART.NAME' | translate}}</clr-dg-column>
+                <clr-dg-column>{{'HELM_CHART.STATUS' | translate}}</clr-dg-column>
                 <clr-dg-column>{{'HELM_CHART.CHARTVERSIONS' | translate}}</clr-dg-column>
                 <clr-dg-column>{{'HELM_CHART.CREATED' | translate}}</clr-dg-column>
                 <clr-dg-placeholder>{{'HELM_CHART.PLACEHOLDER' | translate }}</clr-dg-placeholder>
                 <clr-dg-row *ngFor="let chart of charts" [clrDgItem]="chart">
                     <clr-dg-cell>
                         <span class="list-img">
-                           <img  class="size-24 margin-right-12" [src]="chart.icon ?chart.icon:chartDefaultIcon"  (error)="getDefaultIcon(chart);" />
+                            <img class="size-24 margin-right-12" [src]="chart.icon ?chart.icon:chartDefaultIcon"
+                                (error)="getDefaultIcon(chart);" />
                         </span>
                         <a href="javascript:void(0)" (click)="onChartClick(chart)">{{ chart.name }}</a>
                     </clr-dg-cell>
@@ -66,7 +67,7 @@
             <a let i=index; class="card clickable" (click)="onChartClick(item)">
                 <div class="card-header">
                     <div class="card-icon">
-                        <img  class="size-60" [src]="item.icon ?item.icon:chartDefaultIcon"  (error)="getDefaultIcon(item);" />
+                        <img class="size-60" [src]="item.icon ?item.icon:chartDefaultIcon" (error)="getDefaultIcon(item);" />
                     </div>
                     <div class="card-title">{{item.name}}</div>
                 </div>
@@ -74,14 +75,14 @@
                     <div class="row flex-items-xs-between">
                         <div>
                             <span class="version-text">{{item.total_versions}}</span>
-                            <label class="card-label" *ngIf="item.total_versions !== 1">{{'HELM_CHART.CHARTVERSIONS' | translate}}</label>
-                            <label class="card-label" *ngIf="item.total_versions === 1">{{'HELM_CHART.VERSION' | translate}}</label>
+                            <label class="card-label" *ngIf="item.total_versions !== 1">{{'HELM_CHART.CHARTVERSIONS' |
+                                translate}}</label>
+                            <label class="card-label" *ngIf="item.total_versions === 1">{{'HELM_CHART.VERSION' |
+                                translate}}</label>
                         </div>
                         <div>
-                            <span class="label"
-                            [class.label-danger]="item.deprecated"
-                            [class.label-success]="!item.deprecated"
-                            >{{getStatusString(item) | translate}}</span>
+                            <span class="label" [class.label-danger]="item.deprecated" [class.label-success]="!item.deprecated">{{getStatusString(item)
+                                | translate}}</span>
                         </div>
                     </div>
                 </div>
@@ -100,14 +101,18 @@
                 <section class="form-block">
                     <div class="form-group">
                         <label class="filename-label"> {{'HELM_CHART.CHART_FILE' | translate}} </label>
-                        <input class="filename-input" type="text" placeholder="{{this.chartFile?.name || 'BUTTON.NO_FILE' | translate}}" disabled>
-                        <label for="chart" class="btn btn-secondary btn-sm file-browser-btn">{{'BUTTON.BROWSE' | translate}}</label>
+                        <input class="filename-input" type="text" placeholder="{{this.chartFile?.name || 'BUTTON.NO_FILE' | translate}}"
+                            disabled>
+                        <label for="chart" class="btn btn-secondary btn-sm file-browser-btn">{{'BUTTON.BROWSE' |
+                            translate}}</label>
                         <input class="file-input" type="file" id="chart" name="chart" ngModel (change)="onChartFileChangeEvent($event)">
                     </div>
                     <div class="form-group">
                         <label class="filename-label"> {{'HELM_CHART.CHART_PROV' | translate}} </label>
-                        <input class="filename-input" type="text" placeholder="{{this.provFile?.name || 'BUTTON.NO_FILE' | translate}}" disabled>
-                        <label for="prov" class="btn btn-secondary btn-sm file-browser-btn">{{'BUTTON.BROWSE' | translate}}</label>
+                        <input class="filename-input" type="text" placeholder="{{this.provFile?.name || 'BUTTON.NO_FILE' | translate}}"
+                            disabled>
+                        <label for="prov" class="btn btn-secondary btn-sm file-browser-btn">{{'BUTTON.BROWSE' |
+                            translate}}</label>
                         <input class="file-input" type="file" id="prov" name="prov" ngModel (change)="onProvFileChangeEvent($event)">
                     </div>
                 </section>
