--- a/src/portal/src/app/project/project.component.html
+++ b/src/portal/src/app/project/project.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 position-r">
         <div class="row flex-items-xs-between flex-items-xs-top projectPos">
             <h2 class="header-title">{{'PROJECT.PROJECTS' | translate}}</h2>
             <div>
@@ -15,7 +15,8 @@
                         <option value="2">{{projectTypes[2] | translate}}</option>
                     </select>
                 </div>
-                <hbr-filter [withDivider]="true" filterPlaceholder='{{"PROJECT.FILTER_PLACEHOLDER" | translate}}' (filterEvt)="doSearchProjects($event)" [currentValue]="projectName"></hbr-filter>
+                <hbr-filter [withDivider]="true" filterPlaceholder='{{"PROJECT.FILTER_PLACEHOLDER" | translate}}'
+                    (filterEvt)="doSearchProjects($event)" [currentValue]="projectName"></hbr-filter>
                 <span class="refresh-btn" (click)="refresh()">
                     <clr-icon shape="refresh"></clr-icon>
                 </span>
