--- a/src/portal/lib/src/repository/repository.component.html
+++ b/src/portal/lib/src/repository/repository.component.html
@@ -55,7 +55,7 @@
       <div id=images-container>
         <hbr-tag ngProjectAs="clr-dg-row-detail" (tagClickEvent)="watchTagClickEvt($event)" (signatureOutput)="saveSignatures($event)"
           class="sub-grid-custom" [repoName]="repoName" [registryUrl]="registryUrl" [withNotary]="withNotary"
-          [withClair]="withClair" [withAdmiral]="withAdmiral" [hasSignedIn]="hasSignedIn" [hasProjectAdminRole]="hasProjectAdminRole"
+          [withClair]="withClair" [withAdmiral]="withAdmiral" [hasSignedIn]="hasSignedIn"
           [isGuest]="isGuest" [projectId]="projectId" [memberRoleID]="memberRoleID"></hbr-tag>
       </div>
     </section>
