Support Robot account in Harbor
Signed-off-by: FangyuanCheng <fangyuanc@vmware.com>

--- a/src/portal/lib/src/_mixin.scss
+++ b/src/portal/lib/src/_mixin.scss
@@ -12,7 +12,7 @@
     @include text-overflow;
 }
 
-@mixin grid-left-top-pos{
+@mixin grid-right-top-pos{
     position: absolute;
     z-index: 100;
     right: 35px;
